2009-01-11  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #5630: Install tool removes dots from admin usernames (thanks to Stefano Kowalke)
	* Fixed bug #10090: Hanging record sets in t3lib_TCEmain

2009-01-11  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #9825: Copy / Cut icons don't respect t3skin: drag'n'drop in pagetree (credits to Susanne Moog)

2009-01-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10083: Constant styles.content.imgtext.separateRows is not defined

2009-01-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9596: htmlArea RTE does not work in IRRE subelements

2009-01-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9893: Syntax error in TCA types definitions of tt_content

2009-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9194: Bug: wrong handling of 'is_in' list in TCA element type 'input' (Thanks to Vladimir Podkovanov)

2009-01-07  Francois Suter <francois@typo3.org>

	* Fixed bug #10075: Rootline cache does not work in multilingual websites

2009-01-05  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #10055: Add contrib directory to list of allowed paths (thanks to Dan Osipov)  
	* Fixed bug Fixed bug #9506: label uid shows not working  
	* Fixed bug #10056: Misspelling english word "guesbooks" 

2009-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10047: typo3/contrib is not prefixed with config.absRefPrefix

2009-01-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8361: Stage change notification emails not send when publishing from Live workspace (Thanks to Andreas Wolf)

2008-12-30  Francois Suter <francois@typo3.org>

	* Fixed bug #10035: Function index not up to date in class t3lib_div

2008-12-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8746: Date/time field problem with timezone shifting when using the "+NN", "d" or "d+NN" shortcuts
	* Fixed bug #10033: Date/time field shortcut "d" doesn't work on already filled date fields since 4.2.0